--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classification des Tumeurs Cérébrales</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-
+<body>
     <div class="container">
+        <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Logo" class="logo">
         <h1>Classification des Tumeurs Cérébrales</h1>
-        <p>Par Amy Collé DIOP</p>
+        <p>Amy Collé DIOP</p>
+        <p><strong>Précision des modèles :</strong> 87-88%</p>
 
         <div class="content">
             <div class="description">
